--- a/src/app/shared/select-target-modal/modal/select-target-modal.component.html
+++ b/src/app/shared/select-target-modal/modal/select-target-modal.component.html
@@ -35,7 +35,11 @@
         <hr>
 
         <div class="ble-img" *ngIf="!myTargets || myTargets.length==0">
-            <img src="assets/icons/Group%20834.svg">
+            <img *ngIf="!isScanning" src="assets/icons/Group%20834.svg">
+            <img *ngIf="isScanning" class="scanAnimation" src="assets/icons/Group%20770.svg">
+        </div>
+        <div class="ble-img-abs" *ngIf="isScanning">
+            <img *ngIf="isScanning" class="scanAnimation" src="assets/icons/Group%20770.svg">
         </div>
         <div class="targets-list-container" *ngIf="myTargets.length > 0 ">
             <div class="targets-list" *ngFor="let target of  myTargets; let i = index">
