--- a/src/app/shared/popups/signin-modal/signin-modal.component.scss
+++ b/src/app/shared/popups/signin-modal/signin-modal.component.scss
@@ -6,15 +6,18 @@
   }
 }
 
-section.access-modal {
+section.error-modal {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-between;
-  box-sizing: border-box;
-  padding:  80px 19px 0 19px;
+  align-items: center;
+
+
+  border-radius: 15px;
   position: relative;
-  width: 100%;
+  height: 349px;
+  box-sizing: border-box;
+  padding: 99px 33px 0 33px;
 
   div.close {
     position: absolute;
@@ -22,30 +25,17 @@ section.access-modal {
     right: 14px;
   }
 
-  p.title {
-    font-size: 24px;
-    font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.2;
-    letter-spacing: normal;
-    text-align: center;
-    color: #000000;
-    margin: 0;
-  }
-
   div.main-icon {
-    width: 38px;
-    height: 65px;
+    width: 60px;
+    height: 50px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    margin: 40px 0;
   }
 
-  p.text {
+  p {
     font-size: 16px;
     font-weight: normal;
     font-stretch: normal;
@@ -54,21 +44,21 @@ section.access-modal {
     letter-spacing: normal;
     text-align: center;
     color: rgba(0, 0, 0, 0.8);
-    margin: 0;
   }
-
 
   div.controls {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 33px;
+    margin-left: 33px;
+    margin-right: 19px;
     width: 100%;
 
-    button.confirm {
-      height: 56px;
-      width: 100%;
 
+    button {
+      width: 100%;
+      height: 56px;
       border-radius: 4px;
       box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
       background-color: #ce564b;
@@ -77,19 +67,8 @@ section.access-modal {
       line-height: 16px;
       letter-spacing: 1.25px;
       color: white;
-      margin-bottom: 3px;
-    }
-
-    button.cancel {
-      width: 100%;
-      height: 56px;
-      border-radius: 4px;
-      border: solid 1px #ce564b;
-      background-color: #ffffff;
-      font-size: 14px;
-      line-height: 16px;
-      letter-spacing: 1.25px;
-      color: #ce564b;
+      margin-bottom: 0.5em;
     }
   }
 }
+
