--- a/src/app/shared/select-target-modal/select-target-component.html
+++ b/src/app/shared/select-target-modal/select-target-component.html
@@ -38,6 +38,10 @@
             <img *ngIf="!isScanning" src="assets/icons/Group%20834.svg">
             <img *ngIf="isScanning" class="scanAnimation" src="assets/icons/Group%20770.svg">
         </div>
+        <div class="ble-img-abs" *ngIf="isScanning">
+            <img *ngIf="isScanning" class="scanAnimation" src="assets/icons/Group%20770.svg">
+        </div>
+
         <div class="targets-list-container" *ngIf="myTargets.length > 0 ">
             <div class="targets-list" *ngFor="let target of  myTargets; let i = index">
                 <div class="targets-count"> Traget #{{i}}</div>
