--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -2,6 +2,11 @@
 <widget version="1.0.0" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
   <access origin="*" />
   
+  <feature name="NativePageTransitions">
+    <param name="android-package" value="com.telerik.plugins.nativepagetransitions.NativePageTransitions"/>
+    <param name="onload" value="true"/>
+  </feature>
+
   <feature name="BLE">
     <param name="android-package" value="com.megster.cordova.ble.central.BLECentralPlugin"/>
   </feature>
@@ -20,6 +25,10 @@
 
   <feature name="CropPlugin">
     <param name="android-package" value="com.jeduan.crop.CropPlugin"/>
+  </feature>
+
+  <feature name="SitewaertsDocumentViewer">
+    <param name="android-package" value="de.sitewaerts.cordova.documentviewer.DocumentViewerPlugin"/>
   </feature>
 
   <feature name="FacebookConnectPlugin">
