--- a/src/app/shared/activity-history/activity-history.component.scss
+++ b/src/app/shared/activity-history/activity-history.component.scss
@@ -41,6 +41,7 @@ section.activity-history {
     display: flex;
     align-items: center;
     padding: 0 24px;
+
     div.icon {
       width: 24px;
       height: 24px;
@@ -58,6 +59,7 @@ section.activity-history {
       }
 
     }
+
     div.day-and-drill {
       display: flex;
       flex-direction: column;
@@ -94,6 +96,7 @@ section.activity-history {
         }
       }
     }
+
     margin-bottom: 32px;
   }
 
@@ -101,8 +104,8 @@ section.activity-history {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100%;
-    overflow-y: scroll;
+    height: 500px;
+    overflow-y: auto;
 
     div.card {
       display: flex;
@@ -138,6 +141,7 @@ section.activity-history {
         div.stats {
           display: flex;
           flex-direction: column;
+
           p {
             font-size: 12px;
             font-weight: normal;
@@ -284,10 +288,11 @@ section.activity-history {
         }
 
         div.hidden-content {
-          flex-direction: column;
+          position: relative;
+          display: flex;
+          justify-content: center;
           align-items: center;
-          transition: all 0.3s;
-          display: none;
+          align-content: center;
         }
 
         &.active {
@@ -312,11 +317,625 @@ section.activity-history {
             flex-direction: column;
             justify-content: space-between;
 
-            height: 200px;
+            height: 300px;
+
             svg {
               margin-bottom: 10px;
             }
           }
+        }
+      }
+    }
+  }
+}
+
+.hit {
+  width: 20px;
+  height: 20px;
+  border-radius: 9px;
+  border-radius: 9px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.33);
+  color: #000000;
+  background: #bcbcbc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 900;
+}
+
+img {
+  height: 295px;
+  width: 295px;
+}
+
+.see-target {
+  font-family: Roboto;
+  font-size: 10px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.1;
+  letter-spacing: 1.56px;
+  text-align: left;
+}
+
+@media only screen and (min-device-width: 360px) and (min-device-height: 673px) {
+
+  section.activity-history {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0px 0;
+
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      box-sizing: border-box;
+      height: 56px;
+      margin-bottom: 16px;
+      padding: 0 15px;
+
+      p.title {
+        font-size: 20px;
+        font-weight: 700;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.2;
+        letter-spacing: 0.26px;
+        text-align: center;
+        color: rgba(0, 0, 0, 0.8);
+        margin: 0;
+      }
+
+      div.menu {
+        span {
+          font-size: 30px;
+          font-weight: 700;
+        }
+      }
+    }
+
+    div.date {
+      display: flex;
+      align-items: center;
+      padding: 0 24px;
+
+      div.icon {
+        width: 24px;
+        height: 24px;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.8);
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        margin-right: 8px;
+
+        svg {
+          fill: white;
+        }
+
+      }
+
+      div.day-and-drill {
+        display: flex;
+        flex-direction: column;
+        box-sizing: border-box;
+        align-items: flex-start;
+
+        p {
+          font-size: 12px;
+          line-height: 14px;
+          color: #707070;
+          margin: 0;
+        }
+
+        div.day {
+          display: flex;
+          align-items: center;
+
+          p {
+            margin: 0;
+            font-size: 12px;
+            line-height: 14px;
+            letter-spacing: 1.88px;
+            color: rgba(0, 0, 0, 0.8);
+            padding-right: 0.5em;
+
+            b {
+              margin: 0;
+              font-size: 12px;
+              font-weight: bold;
+              line-height: 14px;
+              color: rgba(0, 0, 0, 0.8);
+              letter-spacing: initial;
+            }
+          }
+        }
+      }
+
+      margin-bottom: 32px;
+    }
+
+    div.cards {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 100%;
+      overflow-y: auto;
+
+      div.card {
+        display: flex;
+        flex-direction: column;
+
+        width: 320px;
+        border-radius: 14px;
+        box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+        background-color: #ffffff;
+        margin-bottom: 24px;
+
+        div.target {
+          display: flex;
+          align-items: center;
+          box-sizing: border-box;
+          padding: 0 24px;
+          margin: 24px 0 16px 0;
+
+          div.icon {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-around;
+
+            height: 24px;
+            width: 24px;
+            border-radius: 5px;
+            background-color: #ce564b;
+            margin-right: 8px;
+          }
+
+          div.stats {
+            display: flex;
+            flex-direction: column;
+
+            p {
+              font-size: 12px;
+              font-weight: normal;
+              font-stretch: normal;
+              font-style: normal;
+              line-height: 1.17;
+              letter-spacing: normal;
+              text-align: left;
+              color: #373737;
+              margin: 0;
+            }
+
+            p.counter {
+              margin: 0;
+              font-size: 12px;
+              font-weight: normal;
+              font-stretch: normal;
+              font-style: normal;
+              line-height: 1.17;
+              letter-spacing: 1.88px;
+              text-align: left;
+              color: #373737;
+
+            }
+          }
+        }
+
+        div.score {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          padding: 0 24px;
+          background-color: rgba(228, 228, 228, 0.4);
+          height: 48px;
+          margin-bottom: 8px;
+
+          div.hits,
+          div.range,
+          div.time {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            height: 38px;
+            justify-content: space-evenly;
+
+            p.score-value {
+              font-size: 17px;
+              line-height: 11px;
+              letter-spacing: 0.22px;
+              color: rgba(0, 0, 0, 0.87);
+              font-weight: 300;
+
+              b {
+                font-size: 17px;
+                line-height: 11px;
+                letter-spacing: 0.22px;
+                color: rgba(0, 0, 0, 0.87);
+                margin: 0;
+              }
+
+            }
+
+            b {
+              font-size: 17px;
+              line-height: 11px;
+              letter-spacing: 0.22px;
+              color: rgba(0, 0, 0, 0.87);
+              margin: 0;
+
+            }
+
+            p {
+              font-size: 10px;
+              line-height: 11px;
+              letter-spacing: 0.13px;
+              color: rgba(0, 0, 0, 0.87);
+              margin: 0;
+            }
+          }
+        }
+
+        div.desc {
+          display: flex;
+          flex-direction: column;
+          padding: 0 24px;
+          height: 48px;
+          margin-bottom: 24px;
+
+          p.title {
+            font-size: 12px;
+            font-weight: normal;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.17;
+            letter-spacing: 1.88px;
+            color: rgba(0, 0, 0, 0.87);
+            margin: 0;
+            padding-bottom: 4px;
+          }
+
+          p {
+            font-size: 12px;
+            font-weight: normal;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.17;
+            letter-spacing: normal;
+            text-align: left;
+            color: rgba(0, 0, 0, 0.47);
+            margin: 0;
+          }
+        }
+
+        div.show-more {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+
+          p {
+            font-size: 10px;
+            font-weight: normal;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.1;
+            letter-spacing: 1.56px;
+            color: #707070;
+            margin: 0;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            svg {
+              width: auto;
+              height: 5px;
+              margin: 8px 0;
+            }
+          }
+
+          p.close-target {
+            display: none;
+          }
+
+          div.hidden-content {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+          }
+
+          &.active {
+            p.close-target {
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+
+              svg {
+                width: auto;
+                height: 5px;
+                margin: 8px 0;
+              }
+            }
+
+            p.see-target {
+              display: none;
+            }
+
+            div.hidden-content {
+              display: flex;
+              flex-direction: column;
+              justify-content: space-between;
+
+              height: 300px;
+
+              svg {
+                margin-bottom: 10px;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .hit {
+    width: 20px;
+    height: 20px;
+    border-radius: 9px;
+    border-radius: 9px;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.33);
+    color: #000000;
+    background: #bcbcbc;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 900;
+  }
+
+  img {
+    height: 295px;
+    width: 295px;
+  }
+
+  .see-target {
+    font-family: Roboto;
+    font-size: 10px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.1;
+    letter-spacing: 1.56px;
+    text-align: left;
+  }
+
+}
+
+div.card {
+  display: flex;
+  flex-direction: column;
+
+  width: 100%;
+  border-radius: 14px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+  background-color: #ffffff;
+  margin-bottom: 24px;
+
+  div.target {
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 0 24px;
+    margin: 24px 0 16px 0;
+
+    div.icon {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+
+      height: 24px;
+      width: 24px;
+      border-radius: 5px;
+      background-color: #ce564b;
+      margin-right: 8px;
+    }
+
+    div.stats {
+      display: flex;
+      flex-direction: column;
+
+      p {
+        font-size: 12px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.17;
+        letter-spacing: normal;
+        text-align: left;
+        color: #373737;
+        margin: 0;
+      }
+
+      p.counter {
+        margin: 0;
+        font-size: 12px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.17;
+        letter-spacing: 1.88px;
+        text-align: left;
+        color: #373737;
+
+      }
+    }
+  }
+
+  div.score {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 0 24px;
+    background-color: rgba(228, 228, 228, 0.4);
+    height: 48px;
+    margin-bottom: 8px;
+
+    div.hits,
+    div.range,
+    div.time {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      height: 38px;
+      justify-content: space-evenly;
+
+      p.score-value {
+        font-size: 17px;
+        line-height: 11px;
+        letter-spacing: 0.22px;
+        color: rgba(0, 0, 0, 0.87);
+        font-weight: 300;
+
+        b {
+          font-size: 17px;
+          line-height: 11px;
+          letter-spacing: 0.22px;
+          color: rgba(0, 0, 0, 0.87);
+          margin: 0;
+        }
+
+      }
+
+      b {
+        font-size: 17px;
+        line-height: 11px;
+        letter-spacing: 0.22px;
+        color: rgba(0, 0, 0, 0.87);
+        margin: 0;
+
+      }
+
+      p {
+        font-size: 10px;
+        line-height: 11px;
+        letter-spacing: 0.13px;
+        color: rgba(0, 0, 0, 0.87);
+        margin: 0;
+      }
+    }
+  }
+
+  div.desc {
+    display: flex;
+    flex-direction: column;
+    padding: 0 24px;
+    height: 48px;
+    margin-bottom: 24px;
+
+    p.title {
+      font-size: 12px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.17;
+      letter-spacing: 1.88px;
+      color: rgba(0, 0, 0, 0.87);
+      margin: 0;
+      padding-bottom: 4px;
+    }
+
+    p {
+      font-size: 12px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.17;
+      letter-spacing: normal;
+      text-align: left;
+      color: rgba(0, 0, 0, 0.47);
+      margin: 0;
+    }
+  }
+
+  div.show-more {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    p {
+      font-size: 10px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.1;
+      letter-spacing: 1.56px;
+      color: #707070;
+      margin: 0;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      svg {
+        width: auto;
+        height: 5px;
+        margin: 8px 0;
+      }
+    }
+
+    p.close-target {
+      display: none;
+    }
+
+    div.hidden-content {
+      position: relative;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+    }
+
+    &.active {
+      p.close-target {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        svg {
+          width: auto;
+          height: 5px;
+          margin: 8px 0;
+        }
+      }
+
+      p.see-target {
+        display: none;
+      }
+
+      div.hidden-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        height: 300px;
+
+        svg {
+          margin-bottom: 10px;
         }
       }
     }
