--- a/src/app/shared/authentication/signin/signin.component.html
+++ b/src/app/shared/authentication/signin/signin.component.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
-                    <input formControlName="email" matInput placeholder="Email">
+                    <input type="email" formControlName="email" matInput placeholder="Email">
                 </mat-form-field>
                 <div class="errors" *ngIf="submitted && f.email.errors">
                     <p class="error-message" *ngIf="f.email.errors.required">Email is required</p>
@@ -17,9 +17,11 @@
             </div>
 
             <div class="row">
+
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input formControlName="password" type="password" matInput placeholder="Password">
+                    <input formControlName="password" [type]="fieldTextType ? 'text' : 'password'"  matInput placeholder="Password">
+                    <mat-icon (click)="toggleFieldTextType()" matSuffix>remove_red_eye</mat-icon>
                 </mat-form-field>
                 <div class="errors" *ngIf="submitted && f.password.errors">
                     <p class="error-message" *ngIf="f.password.errors.required">Password is required</p>
@@ -29,7 +31,7 @@
             </div>
         </form>
         <button class="start" (click)="onLogin()">START SESSION</button>
-        <p class="forgot" (click)="forgotPassword =true;">Forgot your password?</p>
+        <!--        <p class="forgot" (click)="forgotPassword =true;">Forgot your password?</p>-->
     </div>
     <div class="create-account-container">
         <a (click)="goToSignUp()">Create an account</a>
@@ -38,14 +40,15 @@
 </section>
 
 <section *ngIf="forgotPassword" class="login">
-    <div (click)="forgotPassword = !forgotPassword" class="x"> X </div>
+    <div (click)="forgotPassword = !forgotPassword" class="x"> X</div>
     <img class="logo" src="/assets/logo.png" alt="logo">
     <form [formGroup]="registerForm" (ngSubmit)="onLogin()">
         <div class="row">
-            <h4 style="text-align: center;color: white;">Please enter your email, A reset password email will be sent to this address</h4>
+            <h4 style="text-align: center;color: white;">Please enter your email, A reset password email will be sent to
+                this address</h4>
             <mat-form-field appearance="outline" style="padding: 0.5em;width: 100%  ">
                 <mat-label>Email</mat-label>
-                <input formControlName="email" matInput placeholder="Email" [(ngModel)]="resetemail">
+                <input type="email" formControlName="email" matInput placeholder="Email" [(ngModel)]="resetemail">
             </mat-form-field>
             <div class="create-account-container">
                 <a (click)="resetPassword()">Reset Password</a>
