--- a/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
+++ b/src/app/shared/authentication/signup-wizard/signup-wizard.component.html
@@ -1,5 +1,7 @@
 <section class="sign-up-wizard">
-
+    <div class="back" *ngIf="stepTwoActive || stepThreeActive || stepFourActive">
+        <img (click)="back()" src="assets/icons/Arrow%20@3x.png"><span>Back </span>
+    </div>
     <div class="up">
         <p class="sign-up-title"> Sign Up</p>
         <div class="step-circles">
@@ -130,8 +132,8 @@
                 </svg>
                 <p class="terms-condition-text">
                     By using this application, You agree to the
-                    <a (click)="openTerms()">Terms And Condition</a> and<br>
-                    <a (click)="openPrivacy()">Privacy Policy</a>
+                    <a (click)="isShowUOT = !isShowUOT">Terms And Condition</a> and<br>
+                    <a (click)="isPrivatePolicy = !isPrivatePolicy">Privacy Policy</a>
                 </p>
             </div>
         </div>
@@ -161,7 +163,48 @@
     </div>
 
 </section>
-
+<div class="view-wrapper" *ngIf="isShowUOT">
+    <div class="x" (click)="isShowUOT = !isShowUOT"> X</div>
+    <ngx-extended-pdf-viewer
+            [showBookmarkButton]="false"
+            [showBorders]="false"
+            [showFindButton]="false"
+            [showOpenFileButton]="false"
+            [showPagingButtons]="false"
+            [showPresentationModeButton]="false"
+            [showRotateButton]="false"
+            [showScrollingButton]="false"
+            [showSecondaryToolbarButton]="false"
+            [showSidebarButton]="false"
+            [showSpreadButton]="false"
+            [showZoomButtons]="false"
+            [src]="'assets/docs/ADLTOU.pdf'"
+            height="80vh"
+            showSidebarOnLoad="false"
+            textLayer="false"
+            useBrowserLocale="true"></ngx-extended-pdf-viewer>
+</div>
+<div class="view-wrapper" *ngIf="isPrivatePolicy">
+    <div class="x" (click)="isPrivatePolicy = !isPrivatePolicy"> X</div>
+    <ngx-extended-pdf-viewer
+            [showBookmarkButton]="false"
+            [showBorders]="false"
+            [showFindButton]="false"
+            [showOpenFileButton]="false"
+            [showPagingButtons]="false"
+            [showPresentationModeButton]="false"
+            [showRotateButton]="false"
+            [showScrollingButton]="false"
+            [showSecondaryToolbarButton]="false"
+            [showSidebarButton]="false"
+            [showSpreadButton]="false"
+            [showZoomButtons]="false"
+            [src]="'assets/docs/ADLPrivacyPolicy.pdf'"
+            height="80vh"
+            showSidebarOnLoad="false"
+            textLayer="false"
+            useBrowserLocale="true"></ngx-extended-pdf-viewer>
+</div>
 <!--<mat-step [completed]="false" [stepControl]="fourthGroup">-->
 <!--<ng-template matStepLabel>Summary</ng-template>-->
 <!--<app-wizard-summary></app-wizard-summary>-->
