--- a/src/app/shared/authentication/signup-wizard/signup-wizard.component.scss
+++ b/src/app/shared/authentication/signup-wizard/signup-wizard.component.scss
@@ -11,6 +11,7 @@ section.sign-up-wizard {
     flex-direction: column;
     box-sizing: border-box;
     padding: 67px 32px 0 32px;
+
     p.sign-up-title {
       font-weight: 700;
       margin: 0;
@@ -19,6 +20,7 @@ section.sign-up-wizard {
       letter-spacing: 0.31px;
       text-align: left;
     }
+
     div.step-circles {
       display: flex;
       align-items: center;
@@ -77,7 +79,7 @@ section.sign-up-wizard {
     height: 100%;
     justify-content: space-between;
     box-sizing: border-box;
-    padding:  0 41px;
+    padding: 0 41px;
 
     div.terms-and-condition {
       display: flex;
@@ -132,6 +134,7 @@ section.sign-up-wizard {
     letter-spacing: 1.25px;
     color: white;
   }
+
   button.cancel {
     height: 56px;
     border-radius: 4px;
@@ -144,3 +147,233 @@ section.sign-up-wizard {
   }
 }
 
+.view-wrapper {
+  border: 1px solid;
+  border-radius: 15px;
+  padding: 1em;
+  margin: 15px;
+  height: 95%;
+  position: absolute;
+  width: 95%;
+  background: white;
+}
+
+.x {
+  background: black;
+  border-radius: 100%;
+  width: 45px;
+  height: 45px;
+  color: white;
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  align-items: center;
+  position: absolute;
+  top: -10px;
+  right: -5px;
+  z-index: 999;
+}
+
+.back {
+  padding-top: 40px;
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+
+  img {
+    width: 25px;
+    height: 25px;
+  }
+}
+
+@media only screen and (min-device-width: 360px) and (min-device-height: 673px) {
+  section.sign-up-wizard {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+
+    div.up {
+      display: flex;
+      flex-direction: column;
+      box-sizing: border-box;
+      padding: 15px 32px 0 32px;
+
+      p.sign-up-title {
+        font-weight: 700;
+        margin: 0;
+        font-size: 24px;
+        line-height: 28px;
+        letter-spacing: 0.31px;
+        text-align: left;
+      }
+
+      div.step-circles {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 28px 0;
+
+        div.circle {
+          box-sizing: border-box;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-around;
+          width: 50px;
+          height: 50px;
+          border-radius: 25px;
+          border: solid 2px rgba(0, 0, 0, 0.2);
+          transition: all 0.3s;
+
+          p {
+            font-size: 22px;
+            font-weight: normal;
+            font-stretch: normal;
+            font-style: normal;
+            line-height: 1.14;
+            letter-spacing: 0.28px;
+            text-align: left;
+            color: rgba(0, 0, 0, 0.87);
+          }
+
+          svg {
+            fill: #ce564b;
+            width: 25px;
+            height: 15px;
+          }
+
+          &.active {
+            border-color: #ce564b;
+          }
+        }
+
+        div.separator {
+          width: 61px;
+          height: 2px;
+          border: solid 1px rgba(0, 0, 0, 0.2);
+
+          &.active {
+            border-color: #ce564b;
+          }
+        }
+      }
+    }
+
+    div.terms {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      justify-content: space-between;
+      box-sizing: border-box;
+      padding: 0 41px;
+
+      div.terms-and-condition {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        svg {
+          width: 67px;
+          height: 80px;
+          margin-top: 80px;
+          margin-bottom: 20px;
+        }
+
+        p {
+          font-size: 18px;
+          line-height: 20px;
+          color: rgba(0, 0, 0, 0.61);
+          margin: 0;
+          text-align: center;
+
+          a {
+            font-size: 18px;
+            line-height: 20px;
+            color: #0d88e3;
+          }
+
+        }
+      }
+    }
+
+    div.controls {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      box-sizing: border-box;
+      padding: 0 16px;
+      margin-bottom: 33px;
+
+      button.confirm {
+        margin-bottom: 10px;
+      }
+    }
+
+    button.confirm {
+      height: 56px;
+      border-radius: 4px;
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+      background-color: #ce564b;
+
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 1.25px;
+      color: white;
+    }
+
+    button.cancel {
+      height: 56px;
+      border-radius: 4px;
+      border: solid 1px #ce564b;
+      background-color: #ffffff;
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 1.25px;
+      color: #ce564b;
+    }
+  }
+
+  .view-wrapper {
+    border: 1px solid;
+    border-radius: 15px;
+    padding: 1em;
+    margin: 15px;
+    height: 95%;
+    position: absolute;
+    width: 95%;
+    background: white;
+  }
+
+  .x {
+    background: black;
+    border-radius: 100%;
+    width: 45px;
+    height: 45px;
+    color: white;
+    display: -webkit-box;
+    display: flex;
+    -webkit-box-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    align-items: center;
+    position: absolute;
+    top: -10px;
+    right: -5px;
+    z-index: 999;
+  }
+
+  .back {
+    padding-top: 15px;
+    padding-left: 20px;
+    display: flex;
+    align-items: center;
+
+    img {
+      width: 25px;
+      height: 25px;
+    }
+  }
+}
