--- a/src/app/shared/authentication/signup/signup.component.scss
+++ b/src/app/shared/authentication/signup/signup.component.scss
@@ -13,12 +13,14 @@ section.sign-up {
   box-sizing: border-box;
   padding: 0 16px;
   overflow-y: auto;
+
   form.signInForm {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+
     div.row {
       display: flex;
       flex-direction: column;
@@ -90,6 +92,7 @@ section.sign-up {
     div.errors {
       box-sizing: border-box;
       padding: 0 10px;
+
       p {
         font-size: 12px;
         line-height: 1.17;
@@ -119,6 +122,7 @@ section.sign-up {
       color: white;
       margin-bottom: 0.5em;
     }
+
     button.cancel {
       height: 56px;
       border-radius: 4px;
@@ -134,7 +138,7 @@ section.sign-up {
 }
 
 
-.invalid-feedback{
+.invalid-feedback {
   width: 100%;
   margin-left: 18px;
   color: #ce564b;
@@ -145,4 +149,98 @@ section.sign-up {
   font-style: normal;
   line-height: 1.14;
   letter-spacing: 0.24px;
+}
+
+
+@media only screen and (min-device-width: 360px) and (min-device-height: 673px) {
+  form.signInForm {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    div.row {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      width: 100%;
+
+      label {
+        position: relative;
+        box-sizing: border-box;
+        padding: 0.5em;
+        width: 100%;
+      }
+
+      p {
+        position: absolute;
+        margin: 0;
+        height: 14px;
+        font-size: 12px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.17;
+        letter-spacing: 0.4px;
+        text-align: left;
+        color: #bfbfbf;
+
+        padding: 0 10px;
+        z-index: 1;
+        transition: all 0.3s;
+
+        transform: translateY(-50%);
+        top: 50%;
+        left: 20px;
+
+      }
+
+      input {
+        height: 46px !important;
+        border-radius: 4px;
+        opacity: 0.5;
+        border: solid 1px #000000;
+        width: 100%;
+        color: #000;
+        box-sizing: border-box;
+        padding: 0.5em;
+
+      }
+
+      svg.eye {
+        width: 24px;
+        height: 24px;
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        transform: translateY(-50%);
+      }
+
+      label.hasValue p,
+      label:focus-within p {
+        top: 0;
+        transform: translateY(0%);
+        left: 20px;
+        background-color: white;
+      }
+    }
+
+    // Errors
+    div.errors {
+      box-sizing: border-box;
+      padding: 0 10px;
+
+      p {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.4px;
+        text-align: left;
+        color: #ce564b;
+        margin: 0;
+      }
+    }
+  }
+
 }
