--- a/src/app/shared/drill/drill.component.scss
+++ b/src/app/shared/drill/drill.component.scss
@@ -142,14 +142,11 @@ section.drill-results {
       display: flex;
       align-items: center;
       justify-content: center;
-
-      width: 300px;
-      height: 100px;
+      width: 100%;
+      height: 200px;
       background-color: #e4e4e49c;
       position: relative;
       border-radius: 4px;
-
-      margin-right: 60px;
 
       div.dot {
         position: absolute;
@@ -186,8 +183,7 @@ section.drill-results {
 
         p {
           margin: 0;
-          font-size: 15px;
-          line-height: 18px;
+          font-size: 30px;
           letter-spacing: 0.19px;
           color: rgba(0, 0, 0, 0.8);
           text-align: center;
@@ -254,7 +250,6 @@ section.drill-results {
               svg {
                 width: 24px;
                 height: 24px;
-                margin-right: 0.5em;
                 fill: white;
               }
 
@@ -306,7 +301,6 @@ section.drill-results {
 
         }
       }
-
 
 
       div.table-sum {
@@ -381,7 +375,8 @@ section.drill-results {
 ::ng-deep ion-tab-bar {
   display: none;
 }
-td{
+
+td {
   text-align: left;
 }
 
@@ -403,86 +398,25 @@ div.targetHoly {
 
   .some-wrapper {
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 
     .counter-shot {
       position: absolute;
-      top: 131px;
-      left: 136px;
       font-family: Roboto;
-      font-size: 22px;
-      font-weight: normal;
+      font-size: 30px;
+      font-weight: bold;
       font-stretch: normal;
       font-style: normal;
       line-height: 1.14;
       letter-spacing: normal;
       text-align: left;
-      color: rgba(0, 0, 0, 0.81);
+      color: white;
     }
   }
 
-  div.welcome-message {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 70%;
-    height: 50vh;
-    background-color: #e4e4e49c;
-    position: relative;
-    border-radius: 4px;
-
-    div.dot {
-      position: absolute;
-      background-color: gray;
-      width: 9px;
-      height: 9px;
-      border-radius: 100%;
-
-      &.one {
-        top: 0.5em;
-        left: 0.5em;
-      }
-
-      &.two {
-        top: 0.5em;
-        right: 0.5em;
-      }
-
-      &.three {
-        bottom: 0.5em;
-        left: 0.5em;
-      }
-
-      &.four {
-        bottom: 0.5em;
-        right: 0.5em;
-      }
-    }
-
-    div.text {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-
-      p {
-        margin: 0;
-        font-size: 6vh;
-        line-height: 40px;
-        letter-spacing: 0.19px;
-        color: rgba(0, 0, 0, 0.8);
-        text-align: center;
-      }
-    }
-
-    svg {
-      width: 52px;
-      height: 45.4px;
-
-      g#arrow {
-        fill: rgba(0, 0, 0, 0.8);
-      }
-    }
-
-  }
 
   div.results-table {
     width: 353px;
@@ -634,16 +568,277 @@ div.targetHoly {
 }
 
 .hit {
-  background: greenyellow;
-  border-radius: 100%;
+  width: 20px;
+  height: 20px;
+  border-radius: 9px;
+  border-radius: 9px;
+  box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.33);
+  color: #000000;
+  background: #bcbcbc;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: bold;
-  border: 1px solid;
-  height: 20px;
-  width: 20px;
+  font-size: 14px;
+  font-weight: 900;
 }
 
-table tbody { display:block; max-height:450px; overflow-y:scroll; }
-table thead, table tbody tr { display:table; width:100%; table-layout:fixed; }
+table tbody {
+  display: block;
+  max-height: 450px;
+  overflow-y: scroll;
+}
+
+table thead, table tbody tr {
+  display: table;
+  width: 100%;
+  table-layout: fixed;
+}
+
+div.welcome-message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 200px;
+  background-color: #e4e4e49c;
+  position: relative;
+  border-radius: 4px;
+
+  div.dot {
+    position: absolute;
+    background-color: gray;
+    width: 9px;
+    height: 9px;
+    border-radius: 100%;
+
+    &.one {
+      top: 0.5em;
+      left: 0.5em;
+    }
+
+    &.two {
+      top: 0.5em;
+      right: 0.5em;
+    }
+
+    &.three {
+      bottom: 0.5em;
+      left: 0.5em;
+    }
+
+    &.four {
+      bottom: 0.5em;
+      right: 0.5em;
+    }
+  }
+
+  div.text {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    p {
+      margin: 0;
+      font-size: 40px;
+      letter-spacing: 0.19px;
+      color: rgba(0, 0, 0, 0.8);
+      text-align: center;
+    }
+  }
+
+  svg {
+    width: 52px;
+    height: 45.4px;
+
+    g#arrow {
+      fill: rgba(0, 0, 0, 0.8);
+    }
+  }
+
+}
+
+
+@media only screen and (min-device-width: 673px) and (min-device-height: 360px) and (orientation: landscape) {
+  section.drill-results {
+    div.results-table {
+      width: 370px;
+      height: 250px;
+      position: relative;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+
+      table {
+        display: block;
+
+        height: 200px;
+        width: 370px;
+        border-radius: 5px;
+
+        direction: rtl;
+
+        thead {
+          width: 100%;
+          display: block;
+          height: 40px;
+
+          tr {
+            display: flex;
+            align-items: center;
+            flex-direction: row-reverse;
+
+            width: 100%;
+            height: 40px;
+            background: #e4e4e4;
+
+            box-sizing: border-box;
+
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+
+            th {
+              color: #e4e4e4;
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              width: calc(100% / 4);
+              box-sizing: border-box;
+              padding: 0 0.5em;
+
+              svg {
+                width: 24px;
+                height: 24px;
+                fill: white;
+              }
+
+              p {
+                margin: 0;
+                font-size: 12px;
+                line-height: 14px;
+                letter-spacing: 0.12px;
+                color: rgba(0, 0, 0, 0.87);
+              }
+            }
+          }
+        }
+
+        tbody {
+          width: 100%;
+          display: block;
+          overflow-y: scroll;
+          height: 160px;
+
+          tr {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            height: 40px;
+            justify-content: space-around;
+            background-color: white;
+            flex-direction: row-reverse;
+
+            box-sizing: border-box;
+            padding: 0 1em;
+
+            &:nth-child(even) {
+              background-color: #e4e4e4;
+            }
+
+            td {
+              width: calc(100% / 4);
+              color: rgba(0, 0, 0, 0.6);
+              font-size: 12px;
+              line-height: 14px;
+              letter-spacing: 0.12px;
+              text-align: left;
+              box-sizing: border-box;
+              padding: 0 0.5em;
+
+            }
+          }
+
+        }
+      }
+
+
+      div.table-sum {
+        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+        background-color: #262626;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        box-sizing: border-box;
+        padding: 0 1em;
+
+        border-bottom-left-radius: 5px;
+        border-bottom-right-radius: 5px;
+
+        p {
+          width: calc(100% / 4);
+          color: white;
+          font-size: 12px;
+          line-height: 14px;
+          letter-spacing: 0.12px;
+          box-sizing: border-box;
+          padding: 0 0.5em;
+          text-align: right;
+          margin: 0;
+        }
+      }
+
+
+      p.flashing-number {
+        font-size: 205px;
+        font-weight: bold;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.17;
+        letter-spacing: 3.42px;
+        text-align: center;
+        color: rgba(206, 86, 75, 0.81);
+        margin: 0;
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    div.connection-details {
+      position: absolute;
+      top: 0em;
+      left: 5px;
+
+      display: flex;
+      flex-direction: column;
+
+      div.row {
+        display: flex;
+        align-items: center;
+
+        svg {
+          width: 14px;
+          height: 14px;
+          margin-right: 0.5em;
+        }
+
+        p {
+          font-size: 12px;
+          line-height: 16px;
+          color: rgba(0, 0, 0, 0.81);
+          margin: 0;
+        }
+      }
+    }
+
+    div.target {
+      img {
+        height: 245px;
+        width: 245px;
+      }
+    }
+  }
+}
