--- a/src/app/shared/select-target-modal/modal/select-target-modal.component.html
+++ b/src/app/shared/select-target-modal/modal/select-target-modal.component.html
@@ -29,23 +29,20 @@
         <div *ngIf="personalTarget && !isFromWizard">
             <div class="personal-target-title"> Personal Target</div>
             <div class="personal-target-name">
-                E1n1
+                <span>  {{personalTarget.name}}</span>
             </div>
         </div>
         <hr>
 
-        <div class="ble-img" *ngIf="!myTargets || myTargets.length==0">
+        <div class="ble-img" *ngIf="isScanning">
             <img *ngIf="!isScanning" src="assets/icons/Group%20834.svg">
-            <img *ngIf="isScanning" class="scanAnimation" src="assets/icons/Group%20770.svg">
-        </div>
-        <div class="ble-img-abs" *ngIf="isScanning">
             <img *ngIf="isScanning" class="scanAnimation" src="assets/icons/Group%20770.svg">
         </div>
         <div class="targets-list-container" *ngIf="myTargets.length > 0 ">
             <div class="targets-list" *ngFor="let target of  myTargets; let i = index">
                 <div class="targets-count"> Traget #{{i}}</div>
                 <div (click)="onTargetSelected(target)" class="target-name">
-                    <span>  {{target.name | uppercase }}</span>
+                    <span>  {{target.name}}</span>
                     <img *ngIf="target.isSelected" src="assets/icons/Icon%20-%20Check%20Circle%20-%20Filled.svg">
                 </div>
             </div>
@@ -54,11 +51,7 @@
 
         <div class="buttons-container">
             <button class="btn-connect" *ngIf="!this.targetIsConnected" [disabled]="targetNotSelected"
-                    (click)="onTargetChosen();connectedClicked = true;">
-                Connect
-            </button>
-            <button class="btn-connect" *ngIf="targetIsConnected"
-                    (click)="onGoToEditDrill()"> Continue
+                    (click)="onGoToEditDrill()"> Assign
             </button>
         </div>
 
