--- a/src/app/shared/select-target-modal/modal/select-target-modal.component.scss
+++ b/src/app/shared/select-target-modal/modal/select-target-modal.component.scss
@@ -86,10 +86,12 @@ section {
     }
 
     .ble-img {
+      width: 100%;
+      height: 60%;
       display: flex;
       justify-content: center;
+      position: absolute;
       align-items: center;
-      margin-top: 35px;
 
       img {
         width: 178px;
