--- a/src/app/shared/select-target-modal/select-target.component.scss
+++ b/src/app/shared/select-target-modal/select-target.component.scss
@@ -303,3 +303,57 @@ section {
   }
 }
 
+.targets-count {
+  font-family: Roboto;
+  font-size: 12px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.17;
+  letter-spacing: 1.88px;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.61);
+  padding-bottom: 8px;
+  padding-bottom: 8px;
+  margin-left: 24px;
+}
+
+.target-name {
+  margin-right: 24px;
+  margin-left: 24px;
+  height: 40px;
+  border-radius: 4px;
+  border: solid 1px #000000;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.14;
+  letter-spacing: 0.24px;
+  text-align: left;
+  color: rgba(0, 0, 0, 0.87);
+  display: flex;
+  align-items: center;
+  padding-left: 12px;
+  justify-content: space-between;
+
+  span {
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.14;
+    letter-spacing: 0.24px;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.87);
+  }
+
+  img {
+    height: 20px;
+    width: 20px;
+    margin-right: 17px;
+  }
+}
+
