--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -31,8 +31,8 @@ section.dashboard {
     letter-spacing: 0.52px;
     text-align: left;
     color: rgba(0, 0, 0, 0.87);
+    padding: 31px 0 38px 15px;
 
-    padding: 31px 0 38px 42px;
   }
 
   div.profile {
@@ -287,3 +287,117 @@ section.dashboard {
   font-size: 40px;
   text-align: center;
 }
+
+
+div.welcome-message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 95%;
+  height: 200px;
+  background-color: #e4e4e49c;
+  position: relative;
+  border-radius: 4px;
+
+  div.dot {
+    position: absolute;
+    background-color: gray;
+    width: 9px;
+    height: 9px;
+    border-radius: 100%;
+
+    &.one {
+      top: 0.5em;
+      left: 0.5em;
+    }
+
+    &.two {
+      top: 0.5em;
+      right: 0.5em;
+    }
+
+    &.three {
+      bottom: 0.5em;
+      left: 0.5em;
+    }
+
+    &.four {
+      bottom: 0.5em;
+      right: 0.5em;
+    }
+  }
+
+  div.text {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    p {
+      margin: 0;
+      font-size: 25px;
+      line-height: 18px;
+      letter-spacing: 0.19px;
+      color: rgba(0, 0, 0, 0.8);
+      text-align: center;
+    }
+  }
+
+  svg {
+    width: 52px;
+    height: 45.4px;
+
+    g#arrow {
+      fill: rgba(0, 0, 0, 0.8);
+    }
+  }
+
+}
+
+.no-train-wrapper {
+  display: flex;
+  height: 70%;
+  justify-content: center;
+  align-items: center;
+}
+
+::ng-deep .full-screen-modal {
+  width: 100%;
+  max-width: 100% !important;
+}
+
+::ng-deep .mat-dialog-container {
+  border-radius: 0px !important;
+}
+
+//]
+.bla{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  div.image-container {
+    width: 70%;
+    height: 70px;
+    border-radius: 20px;
+    backdrop-filter: blur(13.6px);
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+    background-color: #e4e4e4;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    p {
+      font-size: 20px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.15;
+      letter-spacing: normal;
+      text-align: left;
+      color: rgba(0, 0, 0, 0.8);
+    }
+  }
+}
+
+
