--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -76,6 +76,7 @@ section.profile {
       display: flex;
       align-items: center;
       margin-bottom: 24px;
+      justify-content: space-between;
 
       &:first-of-type {
         margin-top: 24px;
@@ -493,6 +494,7 @@ form.signInForm {
       div {
         display: flex;
         align-items: center;
+        justify-content: space-between;
 
         span {
           margin-left: 16px;
@@ -619,4 +621,757 @@ form.signInForm {
 .body {
   height: 60%;
   overflow-y: auto;
+}
+
+.buttons-container {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 33px;
+  margin-left: 16px;
+  margin-right: 16px;
+  width: calc(100% - 34px);
+  align-items: center;
+  z-index: 9999;
+
+  .btn-connect {
+    width: 343px;
+    height: 56px;
+    border-radius: 4px;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+    background-color: #ce564b;
+    font-family: Roboto, serif;
+    font-size: 14px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.14;
+    letter-spacing: 1.25px;
+    text-align: center;
+    color: #ffffff;
+  }
+
+  .btn-connect:disabled {
+    background-color: #ce564bb3;
+  }
+
+  .btn-setings {
+    width: 343px;
+    height: 56px;
+    border-radius: 4px;
+    border: solid 1px #ce564b;
+    background-color: #ffffff;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.14;
+    letter-spacing: 1.25px;
+    text-align: center;
+    color: #ce564b;
+    margin-top: 10px;
+  }
+}
+
+div.row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+  justify-content: space-between;
+
+  input {
+    width: 200px !important;
+    border: solid 1px #c2c0c0 !important;
+  }
+}
+
+@media only screen and (min-device-width: 360px) and (min-device-height: 673px) {
+
+  :host {
+    overflow-y: scroll;
+  }
+
+  .cock {
+
+  }
+
+  section.profile {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    .content{
+      margin-top: 50px;
+    }
+    label.image {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+
+      input {
+        visibility: hidden;
+        display: none;
+      }
+
+      div.circle {
+        width: 100px;
+        height: 100px;
+        border-radius: 63px;
+        border: solid 2px #d4d4d4;
+        background-color: #f2f2f2;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+        position: relative;
+
+        svg {
+          width: 30.5px;
+          height: 24px;
+        }
+
+        div.add {
+          width: 21px;
+          height: 21px;
+          opacity: 1;
+          border-radius: 63px;
+          border: solid 1px #ffffff;
+          background-color: #71e076;
+          color: #ffffff;
+
+          position: absolute;
+          bottom: 5px;
+          right: 0;
+
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: space-around;
+
+        }
+      }
+    }
+
+    div.form {
+      display: flex;
+      flex-direction: column;
+      box-sizing: border-box;
+      padding: 0 16px;
+      margin-top: 40px;
+
+      div.row {
+        display: flex;
+        align-items: center;
+        margin-bottom: 24px;
+        justify-content: space-between;
+
+        &:first-of-type {
+          margin-top: 24px;
+        }
+
+        p {
+          font-size: 12px;
+          line-height: 14px;
+          letter-spacing: 1.88px;
+          color: rgba(0, 0, 0, 0.87);
+          margin: 0;
+          width: 40%;
+        }
+
+        input {
+          width: 106px;
+          height: 40px;
+          border-radius: 4px;
+          border: solid 1px #f2f2f2;
+          background-color: #ffffff;
+          color: rgba(0, 0, 0, 0.87);
+
+          box-sizing: border-box;
+          padding: 12px;
+
+          font-size: 14px;
+          line-height: 1.14;
+          letter-spacing: 0.24px;
+          text-align: left;
+        }
+
+        select {
+          width: 214px;
+          height: 40px;
+          border-radius: 4px;
+          border: solid 1px #f2f2f2;
+          background-color: #ffffff;
+          color: rgba(0, 0, 0, 0.87);
+          box-sizing: border-box;
+          padding: 12px;
+
+          font-size: 14px;
+          line-height: 1.14;
+          letter-spacing: 0.24px;
+          text-align: left;
+          margin: 0;
+          -webkit-box-sizing: border-box;
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+
+          background-image: linear-gradient(45deg, transparent 50%, #7f7f7f 50%),
+          linear-gradient(135deg, #7f7f7f 50%, transparent 50%),
+          linear-gradient(to right, #f2f2f2, #f2f2f2);
+          background-position: calc(100% - 20px) calc(1em + 2px),
+          calc(100% - 15px) calc(1em + 2px),
+          calc(100% - 2.5em) 0;
+          background-size: 5px 5px, 5px 5px, 1px 40px;
+          background-repeat: no-repeat;
+
+          &:focus {
+            background-image: linear-gradient(45deg, #f2f2f2 50%, transparent 50%),
+            linear-gradient(135deg, transparent 50%, #f2f2f2 50%),
+            linear-gradient(to right, #ccc, #ccc);
+            background-position: calc(100% - 15px) 1em,
+            calc(100% - 20px) 1em,
+            calc(100% - 2.5em) 0.5em;
+            background-size: 5px 5px,
+            5px 5px,
+            1px 1.5em;
+            background-repeat: no-repeat;
+            border-color: #f2f2f2;
+            outline: 0;
+          }
+        }
+
+        a {
+          font-size: 16px;
+          line-height: 1.19;
+          letter-spacing: 0.21px;
+          color: #4d89f5;
+          width: 50%;
+        }
+      }
+
+    }
+
+    div.weapon-options {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+
+      box-sizing: border-box;
+      padding: 0 16px;
+
+
+      div.container {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        box-sizing: border-box;
+        margin-bottom: 24px;
+        height: 40px;
+
+        div.title-and-icon {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          svg {
+            width: 25px;
+            height: 25px;
+            margin-right: 0.5em;
+            background: #373737;
+            border-radius: 8px;
+            padding: 2px;
+          }
+
+          p {
+            font-size: 12px;
+            line-height: 14px;
+            letter-spacing: 1.88px;
+            color: rgba(0, 0, 0, 0.87);
+            margin: 0;
+          }
+
+        }
+
+        &:first-of-type {
+          margin-top: 24px;
+        }
+      }
+
+      button.select-button {
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 1.25px;
+
+        border-radius: 4px;
+        border: solid 1px #ce564b;
+        background-color: #ffffff;
+        color: #ce564b;
+        width: 214px;
+        height: 100%;
+      }
+    }
+
+    div.controls {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      box-sizing: border-box;
+      padding: 0 16px;
+      margin-bottom: 33px;
+
+      button.confirm {
+        margin-bottom: 10px;
+      }
+    }
+
+    button.confirm {
+      height: 56px;
+      border-radius: 4px;
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+      background-color: #ce564b;
+
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 1.25px;
+      color: white;
+    }
+
+    button.cancel {
+      height: 56px;
+      border-radius: 4px;
+      border: solid 1px #ce564b;
+      background-color: #ffffff;
+      font-size: 14px;
+      line-height: 16px;
+      letter-spacing: 1.25px;
+      color: #ce564b;
+    }
+  }
+
+  .edit-mode {
+    width: 230px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    border-bottom: 1px solid #eaeaea;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.19;
+    letter-spacing: 0.21px;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.87);
+  }
+
+  .gunslist {
+    width: 230px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    border-bottom: 1px solid #eaeaea;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.19;
+    letter-spacing: 0.21px;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.87);
+  }
+
+  .do-you-have-target {
+    border-radius: 4px;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+    background-color: #ffffff;
+    margin-right: 16px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
+    margin-bottom: 42px;
+    margin-top: 48px;
+
+    .top-row {
+      display: flex;
+      margin-left: 16px;
+      margin-top: 16px;
+      margin-right: 16px;
+      align-items: center;
+
+      .svg-wrapper {
+        height: 24px;
+        width: 24px;
+        background: #ce564b;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+
+        svg {
+          fill: white;
+          height: 18px;
+          width: 18px;
+        }
+      }
+
+      .title {
+        font-family: Roboto;
+        font-size: 12px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.17;
+        letter-spacing: 1.88px;
+        text-align: left;
+        color: rgba(0, 0, 0, 0.87);
+        margin-left: 16px;
+      }
+    }
+
+    p {
+      font-family: Roboto;
+      font-size: 12px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.17;
+      letter-spacing: normal;
+      text-align: left;
+      color: rgba(0, 0, 0, 0.47);
+    }
+
+    button {
+      width: 312px;
+      height: 40px;
+      border-radius: 4px;
+      border: solid 1px #ce564b;
+      font-family: Roboto;
+      font-size: 14px;
+      font-weight: 500;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.14;
+      letter-spacing: 1.25px;
+      text-align: center;
+      color: #ce564b;
+      align-self: center;
+      margin-bottom: 16px;
+      background-color: white;
+    }
+  }
+
+  .round-border {
+    img {
+      width: 100px;
+      height: 100px;
+      border-radius: 100%;
+    }
+  }
+
+  .my-target-name {
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.19;
+    letter-spacing: 0.21px;
+    text-align: left;
+    color: #4d89f5;
+    margin-left: 18px;
+  }
+
+
+  header {
+    position: relative;
+
+    background-image: linear-gradient(#00000054, #00000054), url("../../assets/edit-drill.jpg");
+    background-size: 100% 200px;
+    background-position: center center;
+    background-repeat: no-repeat;
+    height: 200px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    box-sizing: border-box;
+
+    div {
+      display: flex;
+      align-items: center;
+      padding-top: 40px;
+      justify-content: center;
+
+      p {
+        color: white;
+        margin: 0;
+        font-size: 20px;
+        line-height: 24px;
+        letter-spacing: 0.26px;
+      }
+
+      svg {
+        width: 35px;
+        height: 35px;
+        position: absolute;
+        left: 1em;
+      }
+
+    }
+
+
+  }
+
+  .avatar {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    bottom: -50px;
+    border-radius: 100%;
+    background: #848889;
+    padding: 1px;
+  }
+
+
+  .change-photo-title {
+    color: #4d89f5;
+    font-family: Roboto;
+    font-size: 12px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.17;
+    letter-spacing: 0.15px;
+    text-align: left;
+    color: #4d89f5;
+    margin: 0;
+    margin-top: 70px;
+    text-align: center;
+  }
+
+
+  form.signInForm {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    div.row {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-evenly;
+      width: 100%;
+
+      label {
+        position: relative;
+        box-sizing: border-box;
+        padding: 0.5em;
+        width: 100%;
+        height: 42px;
+
+        div {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+
+          span {
+            margin-left: 16px;
+            margin-right: 64px;
+          }
+        }
+      }
+
+      p {
+        position: absolute;
+        margin: 0;
+        height: 14px;
+        font-size: 12px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.17;
+        letter-spacing: 0.4px;
+        text-align: left;
+        color: #bfbfbf;
+
+        padding: 0 10px;
+        z-index: 1;
+        transition: all 0.3s;
+
+        transform: translateY(-50%);
+        top: 50%;
+        left: 20px;
+
+      }
+
+      input {
+        height: 43px;
+        border-radius: 4px;
+        opacity: 0.5;
+        border: solid 1px #000000;
+        width: 214px;
+        color: #000;
+        box-sizing: border-box;
+        padding: 0.5em;
+        margin-left: 145px;
+      }
+
+      select {
+        height: 43px;
+        border-radius: 4px;
+        opacity: 0.5;
+        border: solid 1px #000000;
+        width: 214px;
+        color: #000;
+        box-sizing: border-box;
+        padding: 0.5em;
+        margin-left: 145px;
+      }
+
+      svg.eye {
+        width: 24px;
+        height: 24px;
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        transform: translateY(-50%);
+      }
+
+      label.hasValue p,
+      label:focus-within p {
+        top: 0;
+        transform: translateY(0%);
+        left: 20px;
+        background-color: white;
+      }
+    }
+
+    // Errors
+    div.errors {
+      box-sizing: border-box;
+      padding: 0 10px;
+
+      p {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.4px;
+        text-align: left;
+        color: #ce564b;
+        margin: 0;
+      }
+    }
+  }
+
+  .edit-row {
+    display: flex;
+    align-items: center;
+
+    .title {
+      margin-left: 16px;
+    }
+
+    .edit-mode {
+      display: flex;
+      justify-content: space-between;
+      margin-left: 100px;
+      WIDTH: 100%;
+      margin-right: 16px;
+
+      img {
+        width: 15px;
+        height: 15px;
+      }
+
+      .email {
+        font-family: Roboto;
+        font-size: 16px;
+        font-weight: normal;
+        font-stretch: normal;
+        font-style: normal;
+        line-height: 1.19;
+        letter-spacing: 0.21px;
+        text-align: left;
+        color: #4d89f5;
+      }
+    }
+  }
+
+  .body {
+    height: 60%;
+    overflow-y: auto;
+  }
+
+  .buttons-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 33px;
+    margin-left: 16px;
+    margin-right: 16px;
+    width: calc(100% - 34px);
+    align-items: center;
+    z-index: 9999;
+
+    .btn-connect {
+      width: 343px;
+      height: 56px;
+      border-radius: 4px;
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
+      background-color: #ce564b;
+      font-family: Roboto, serif;
+      font-size: 14px;
+      font-weight: 500;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.14;
+      letter-spacing: 1.25px;
+      text-align: center;
+      color: #ffffff;
+    }
+
+    .btn-connect:disabled {
+      background-color: #ce564bb3;
+    }
+
+    .btn-setings {
+      width: 343px;
+      height: 56px;
+      border-radius: 4px;
+      border: solid 1px #ce564b;
+      background-color: #ffffff;
+      font-family: Roboto;
+      font-size: 14px;
+      font-weight: 500;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: 1.14;
+      letter-spacing: 1.25px;
+      text-align: center;
+      color: #ce564b;
+      margin-top: 10px;
+    }
+  }
+
+  div.row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;
+    justify-content: space-between;
+
+    input {
+      width: 200px !important;
+      border: solid 1px #c2c0c0 !important;
+    }
+  }
 }
