--- a/src/app/shared/drill/drill.component.scss
+++ b/src/app/shared/drill/drill.component.scss
@@ -324,7 +324,7 @@ section.drill-results {
           letter-spacing: 0.12px;
           box-sizing: border-box;
           padding: 0 0.5em;
-          text-align: right;
+          text-align: left;
           margin: 0;
         }
       }
@@ -841,4 +841,23 @@ div.welcome-message {
       }
     }
   }
+}
+
+.table-header {
+  display: flex;
+  width: 100%;
+  justify-content: space-evenly;
+  height: 30px;
+
+  div {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+  }
+}
+
+.table-body {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
 }
