--- a/src/app/shared/authentication/signup/signup.component.scss
+++ b/src/app/shared/authentication/signup/signup.component.scss
@@ -1,7 +1,7 @@
 @import "../../../../assets/colors";
 
 :host {
-  height: 100%;
+  height: 90%;
 }
 
 section.sign-up {
@@ -243,4 +243,16 @@ section.sign-up {
     }
   }
 
+}
+
+.iphone{
+  height: 70%;
+}
+.iphone-wrapper{
+  width: 100%;
+  height: 100%;
+}
+.addpading{
+  background-color: white;
+  margin-bottom: 20px;
 }
